[project]
name = "DAF_pricing_forecast"
version = "0.1.0"
description = "Forecast pricing values for the Pass Culture Finance team using machine learning models, including Prophet, to support data-driven financial decisions."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-cloud-bigquery>=3.39.0",
    "google-cloud-secret-manager>=2.26.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "numpy==2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-gbq>=0.33.0",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py312'

lint.select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
