[project]
name = "item-linkage"
version = "0.1.0"
requires-python = "==3.10"
dependencies = [
    "async-timeout==4.0.3",
    "docarray==0.21.0",
    "gcsfs>=2023.1.0",
    "google-cloud-bigquery[pandas]>=3.29.0",
    "google-cloud-secret-manager==2.20.0",
    "hnne==0.1.10",
    "lancedb==0.18.0",
    "loguru==0.6.0",
    "matplotlib>=3.10.5",
    "mlflow==2.20.1",
    "networkx==3.3",
    "numpy==1.26.0",
    "pandas==2.2.2",
    "pandas-gbq==0.23.1",
    "polars==0.18.6",
    "recordlinkage==0.16",
    "seaborn>=0.13.2",
    "sentence-transformers==3.3.1",
    "setuptools==78.1.1",
    "streamlit==1.35.0",
    "torch==2.6.0",
    "tornado==6.5",
    "tqdm==4.64.1",
    "typer==0.7.0",
]
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
