[project]
name = "offer-compliance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "altair==5.3.0",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "cachetools==5.3.3",
    "catboost==1.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "exceptiongroup==1.2.1",
    "gcsfs==2023.5.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "google-api-core==2.19.1",
    "google-auth==2.31.0",
    "google-cloud-aiplatform>=1.85.0",
    "google-cloud-core==2.4.1",
    "google-cloud-secret-manager>=2.20.2",
    "google-cloud-storage==2.16.0",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.7.1",
    "googleapis-common-protos==1.63.2",
    "idna==3.7",
    "iniconfig==2.0.0",
    "jinja2==3.1.4",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.22.0",
    "loguru>=0.7.3",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mlflow==2.20.1",
    "numpy==1.26.4",
    "packaging==24.1",
    "pandas-gbq>=0.17.1",
    "pandas==1.5.3",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "proto-plus==1.24.0",
    "protobuf==4.25.8",
    "pyarrow==16.1.0",
    "pyasn1-modules==0.4.0",
    "pyasn1==0.6.0",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pytest==8.2.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "rpds-py==0.18.1",
    "rsa==4.9",
    "sentence-transformers==2.7",
    "shap==0.41.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "smmap==5.0.1",
    "streamlit==1.35.0",
    "tenacity==8.5.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "toolz==0.12.1",
    "tornado==6.4.2",
    "typer==0.12.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "watchdog==4.0.1",
]

[tool.ruff]
target-version = 'py310'

lint.select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
    "FBT001", # flake8-boolean-trap
]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
