[project]
name = "ranking-endpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==5.0.1",
    "datetime==4.3",
    "gcsfs==2023.5.0",
    "google-cloud-aiplatform==1.22.0",
    "google-cloud-secret-manager==2.4.0",
    "keras==2.14",
    "lightgbm==4.6.0",
    "loguru==0.6.0",
    "matplotlib==3.9.3",
    "mlflow==2.20.1",
    "numpy==1.26.4",
    "pandas==2.0.3",
    "pandas-gbq>=0.17.1",
    "polars==0.18.6",
    "protobuf>=3.9.2",
    "scikit-learn==1.3.0",
    "seaborn>=0.13.2",
    "setuptools==78.1.1",
    "tensorflow==2.14.0",
    "tqdm==4.64.1",
    "typer==0.7.0",
]
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
