[project]
name = "ranking-endpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "async-timeout>=5.0.1",
    "datetime>=4.3",
    "gcsfs>=2023.5.0",
    "google-cloud-aiplatform>=1.22.0",
    "google-cloud-secret-manager>=2.4.0",
    "lightgbm>=4.6.0",
    "loguru>=0.6.0",
    "matplotlib>=3.9.3",
    "mlflow>=3.8.1",
    "numpy>=1.26.4",
    "pandas>=2.0.3",
    "pandas-gbq>=0.17.1",
    "polars>=0.18.6",
    "protobuf>=3.9.2",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "setuptools>=78.1.1",
    "tqdm>=4.64.1",
    "typer>=0.7.0",
]
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
