[project]
name = "reduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==4.0.3",
    "gcsfs==2023.5.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-secret-manager>=2.2.0",
    "hdbscan>=0.8.28",
    "loguru==0.7.0",
    "numba>=0.60.0",
    "numpy<2.0.0",
    "pandas==1.4.1",
    "pandas-gbq>=0.17.1",
    "polars==0.19.12",
    "pyarrow==13.0.0",
    "pynndescent>=0.5.13",
    "setuptools==78.1.1",
    "tqdm==4.66.1",
    "typer==0.12.3",
    "umap-learn[parametric-umap]>=0.5.3",
]
