[project]
name = "retrieval-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.6",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "blinker==1.8.2",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cython==3.0.11",
    "decorator==5.1.1",
    "deprecation==2.1.0",
    "docarray==0.21.0",
    "docker==7.1.0",
    "ecdsa==0.19.0",
    "exceptiongroup==1.2.2",
    "filelock==3.16.1",
    "flask-cors==4.0.0",
    "flask==3.0.0",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hnne==0.1.10",
    "hpack==4.0.0",
    "huggingface-hub==0.25.1",
    "hypercorn==0.15.0",
    "hyperframe==6.0.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "itsdangerous==2.2.0",
    "jina-hubble-sdk==0.39.0",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "lancedb==0.13.0",
    "llvmlite==0.43.0",
    "loguru==0.6.0",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "networkx==3.2.1",
    "nltk==3.9.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "overrides==7.7.0",
    "packaging==24.1",
    "pandas==2.1.1",
    "pathspec==0.12.1",
    "pillow==10.4.0",
    "priority==2.0.0",
    "py==1.11.0",
    "pyarrow==14.0.1",
    "pyasn1==0.4.8",
    "pydantic-core==2.23.4",
    "pydantic==2.9.2",
    "pygments==2.18.0",
    "pylance==0.17.0",
    "pynndescent==0.5.13",
    "python-dateutil==2.9.0.post0",
    "python-jose==3.4.0",
    "python-json-logger==2.0.7",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "retry==0.9.2",
    "rich==13.8.1",
    "rsa==4.9",
    "safetensors==0.4.5",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "sentence-transformers==2.2.2",
    "sentencepiece==0.2.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sympy==1.13.1",
    "taskgroup==0.0.0a4",
    "threadpoolctl==3.5.0",
    "tokenizers==0.19.1",
    "tomli==2.0.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "typer==0.12.5",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "werkzeug==3.0.4",
    "wsproto==1.2.0",
    "yarl==1.12.1",
    "zipp==3.20.2",
]

[tool.uv]
dev-dependencies = [
    "flask-testing==0.8.1",
    "gcsfs>=2023.5.0",
    "google-cloud-aiplatform>=1.22.0",
    "google-cloud-bigquery[pandas]>=3.25.0",
    "google-cloud-secret-manager==2.4.0",
    "keras==2.14",
    "mlflow==2.20.1",
    "numpy==1.26.4",
    "pandas>=1.5.3",
    "polars==0.18.6",
    "protobuf>=3.9.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.6.1",
    "pytest==7.3.0",
    "python-jose==3.4.0",
    "python-json-logger==2.0.7",
    "sentence-transformers==2.2.2",
    "tensorflow==2.14.0",
    "unittest2==1.1.0",
    "tensorflow-macos==2.14.0 ; sys_platform == 'darwin'",
]

## uv
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

## ruff
# Recommended ruff config for now, to be updated as we go along.
[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]
# TARGET : lint.select = [
#     "E",      # pycodestyle
#     "W",      # pycodestyle
#     "F",      # Pyflakes
#     "B",      # flake8-bugbear
#     "C4",     # flake8-comprehensions
#     "I",      # isort
#     "SIM",    # flake8-simplify
#     "TCH",    # flake8-type-checking
#     "TID",    # flake8-tidy-imports
#     "UP",     # pyupgrade
#     "PT",     # flake8-pytest-style
#     "RUF",    # Ruff-specific rules
#     "FBT001", # flake8-boolean-trap
# ]

[tool.ruff.lint.pydocstyle]
# Automatically disable rules that are incompatible with Google docstring convention
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Pydantic needs to be able to evaluate types at runtime
# see https://pypi.org/project/flake8-type-checking/ for flake8-type-checking documentation
# see https://beta.ruff.rs/docs/settings/#flake8-type-checking-runtime-evaluated-base-classes for ruff documentation
