[project]
name = "semantic-search-lancedb"
version = "0.1.0"
description = "Job to create LanceDB table with item semantic embeddings"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "lancedb>=0.30.0",
    "loguru>=0.7.0",
    "pyarrow>=23.0.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
]
