[project]
name = "pass-culture-bigquery-archive-partition"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "google-cloud-bigquery==3.20.1",
    "typer==0.25.1",
    "pydantic==2.11.3",
]

[tool.uv]
constraint-dependencies = [
    "urllib3 >= 2.7.0", # CVE-2026-44432, CVE-2026-44431, PYSEC-2026-141, PYSEC-2026-142
]
