[project]
name = "export-clickhouse"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "clickhouse-connect>=0.7.15",
    "gcsfs>=2021.9.0",
    "google-cloud-bigquery>=2.3.1",
    "google-cloud-secret-manager>=2.4.0",
    "jinja2>=3.1.6",
    "numpy~=1.26.4",
    "pandas>=2.1.1",
    "pandas-gbq>=0.17.1",
    "polars>=0.18.6",
    "protobuf>=5.29.6",
    "typer>=0.7.0",
]

[tool.ruff]
target-version = 'py310'

lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.uv]
constraint-dependencies = [
    "urllib3 >= 2.7.0", # CVE-2026-44432, CVE-2026-44431, PYSEC-2026-141, PYSEC-2026-142
]
